--- a/pom.xml
+++ b/pom.xml
@@ -68,11 +68,11 @@
    <distributionManagement>
     <snapshotRepository>
       <id>nexus-snapshots</id>
-      <url>https://agile.nat.bt.com/nexus/repository/EED_Engg-Excellence-Devops-POC_maven_snapshots/</url>
+      <url>http://65.0.179.45:8081/repository/maven-snapshots/</url>
     </snapshotRepository>
     <repository>
       <id>nexus-releases</id>
-      <url>https://agile.nat.bt.com/nexus/repository/EED_Engg-Excellence-Devops-POC_maven_releases/</url>
+      <url>http://65.0.179.45:8081/repository/maven-releases/</url>
     </repository>
   </distributionManagement>
 
